// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block with 'as' prop renders the specified html element 1`] = `
<DocumentFragment>
  <select
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with no props renders an unstyled div 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with non-theme values for width and height uses the actual values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px;
  border-right: 2px;
  border-bottom: 3px;
  border-left: 4px;
  border-style: dashed;
  border-width: 5px;
  border-color: blue;
  width: 12px;
  height: 56rem;
  max-width: 1234px;
  max-height: 5678rem;
  min-width: 1234rem;
  min-height: 5678px;
  top: 10px;
  right: 20px;
  bottom: 30x;
  left: 40px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with overflow set to scrollX renders no overflow prop 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with overflow set to scrollY renders no overflow prop 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with responsive style props renders a responsive styled div 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #09111c;
  background-color: #ffffff;
  font-family: DM Sans,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.5;
  border: 1px solid black;
  border-top: sizing010;
  border-right: sizing010;
  border-bottom: sizing020;
  border-left: sizing030;
  border-style: dashed;
  border-width: 16px;
  border-color: blue;
  margin: 4px;
  margin-top: 4px;
  margin-right: 4px;
  margin-bottom: 8px;
  margin-left: 12px;
  padding: 16px;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 40px;
  padding-left: 48px;
  width: 4px;
  height: 4px;
  max-width: 48px;
  max-height: 24px;
  min-width: 24px;
  min-height: 8px;
  display: grid;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  top: sizing010;
  right: sizing010;
  bottom: sizing020;
  left: sizing030;
  overflow: hidden;
}

@media screen and (min-width: 0px) {
  .emotion-0 {
    color: #2e3f54;
    background-color: #f0f1f3;
    font-family: DM Sans,sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
    border: 2px dashed blue;
    border-top: sizing010;
    border-right: sizing020;
    border-bottom: sizing030;
    border-left: sizing040;
    border-style: solid;
    border-width: 24px;
    border-color: green;
    margin: 40px;
    margin-top: 48px;
    margin-right: 4px;
    margin-bottom: 4px;
    margin-left: 32px;
    padding: 24px;
    padding-top: 32px;
    padding-right: 40px;
    padding-bottom: 48px;
    padding-left: 48px;
    width: 48px;
    height: 12px;
    max-width: 40px;
    max-height: 16px;
    min-width: 32px;
    min-height: 12px;
    display: block;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    -ms-flex-positive: 2;
    flex-grow: 2;
    -webkit-box-pack: right;
    -ms-flex-pack: right;
    -webkit-justify-content: right;
    justify-content: right;
    -webkit-align-items: inherit;
    -webkit-box-align: inherit;
    -ms-flex-align: inherit;
    align-items: inherit;
    -webkit-align-self: flex-end;
    -ms-flex-item-align: flex-end;
    align-self: flex-end;
    position: absolute;
    top: sizing080;
    right: sizing010;
    bottom: sizing010;
    left: sizing060;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    color: #5a6a79;
    background-color: #dee2e5;
    font-family: DM Sans,sans-serif;
    font-weight: 400;
    font-size: 18px;
    line-height: 1.5;
    border: 3px dotted green;
    border-top: sizing020;
    border-right: sizing030;
    border-bottom: sizing040;
    border-left: sizing050;
    border-style: dotted;
    border-width: 32px;
    border-color: yellow;
    margin: 48px;
    margin-top: 48px;
    margin-right: 8px;
    margin-bottom: 12px;
    margin-left: 40px;
    padding: 32px;
    padding-top: 40px;
    padding-right: 48px;
    padding-bottom: 48px;
    padding-left: 48px;
    width: 48px;
    height: 4px;
    max-width: 32px;
    max-height: 12px;
    min-width: 48px;
    min-height: 16px;
    display: table;
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    -webkit-box-pack: unset;
    -ms-flex-pack: unset;
    -webkit-justify-content: unset;
    justify-content: unset;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    -webkit-align-self: inherit;
    -ms-flex-item-align: inherit;
    align-self: inherit;
    position: inherit;
    top: sizing080;
    right: sizing020;
    bottom: sizing030;
    left: sizing070;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with simple style props renders a styled div 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #09111c;
  background-color: #14328d;
  font-family: DM Sans,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.5;
  border: 1px solid black;
  border-top: sizing010;
  border-right: sizing010;
  border-bottom: sizing020;
  border-left: sizing030;
  border-style: dashed;
  border-width: 16px;
  border-color: blue;
  margin: 4px;
  margin-top: 4px;
  margin-right: 4px;
  margin-bottom: 8px;
  margin-left: 12px;
  padding: 16px;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 40px;
  padding-left: 48px;
  width: 4px;
  height: 48px;
  max-width: 4px;
  max-height: 4px;
  min-width: 12px;
  min-height: 12px;
  display: grid;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  position: relative;
  top: sizing010;
  right: sizing010;
  bottom: sizing020;
  left: sizing030;
  overflow: hidden;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
